--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Unknown macro: {             font-size}
 </p>
 
 <script>
-    document.getElementById('originOutput').innerText = "testing";
+    document.getElementById('originOutput').textContent = "testing";
 
     document.body.addEventListener('click', function ()
 
