--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Unknown macro: {             font-size}
 </p>
 
 <script>
-    document.getElementById('originOutput').textContent = `iframe on ${window.location.origin}`;
+    document.getElementById('originOutput').textContent = `iframe on ${window.parent.origin}`;
 </script>
 
 </body>
